syntax = "proto3";

service CryptoService {
  rpc GetCryptoById(GetCryptoByIdRequest) returns (CryptoResponse);
  rpc ListCryptos(EmptyRequest) returns (ListCryptosResponse);
  rpc CreateCrypto(CreateCryptoRequest) returns (CryptoResponse);
  rpc DeleteCryptoById(GetCryptoByIdRequest) returns (SuccessMessageResponse);
}

message Crypto {
  uint64 id = 1;
  string name = 2;
  int64 votes = 3;
}

message GetCryptoByIdRequest {
  uint64 id = 1;
}

message CreateCryptoRequest {
  string name = 1;
  int64 votes = 2;
}

message CryptoResponse {
    Crypto crypto = 1;
    string error = 2;
}

message ListCryptosResponse {
  repeated Crypto cryptos = 1;
  string error = 2;
}

message SuccessMessageResponse {
  string message = 1;
  bool success = 2;
  string error = 3;
}

message EmptyRequest {}